fix theme flicker on page load

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,10 @@
 
 /* THEME START */
 
+body.hidden {
+  display: none;
+}
+
 body.light {
   --background: #fff;
   --font-color: #000;
